Fix viewport size error on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,12 @@
     width: 100%;
 }
 
-.map-container{
-    height: 100vh;
+.map-container {
+    height: 100dvh;
     width: 100%;
 }
 
-.clicked-coord-label{
+.clicked-coord-label {
     position: absolute;
     right: 0;
     bottom: 0;
